improve(tasks-dashboard): correct vertical spacing of sections

--- a/webapps/ui/common/styles/pages/dashboard.less
+++ b/webapps/ui/common/styles/pages/dashboard.less
@@ -103,6 +103,13 @@
   }
 }
 
+.dashboard-row {
+  overflow: hidden;
+  > section {
+    margin-bottom: 0;
+  }
+}
+
 .cockpit-section-dashboard {
   .cam-table {
     margin-bottom: 5px;
